# tamed_beast

./: CMakeLists.txt  TamedBeast.y  json_rpc_service.cpp  json_rpc_service.hpp  tamed_beast.cpp  web_server.cpp  web_server.hpp
webui/: package.json  tsconfig.json  webpack.config.js  webpack.release.config.js
webui/src/: index.tsx
webui/src/components/: app.tsx  base-sprites-tab.tsx  base-tiles-tab.tsx  confirm-modal.tsx  data-editors.tsx  data-inplace-editors.tsx  data-renderers.tsx  filtered-list.tsx  other-tab.tsx  record-edit-form.tsx  sprites-tab.tsx  table-view.tsx  tables-tab.tsx  tiles-tab.tsx
webui/src/database/: scheme.tsx
webui/src/utils/: color.ts  jsonrpc.ts  offset.ts  rect.ts  settings.ts  sprites-loader.ts  string-util.ts  tiles-loader.ts
